safer id generation

--- a/.env-example
+++ b/.env-example
@@ -2,8 +2,9 @@ ENV=local
 LOG_LEVEL=info
 SSH_PORT=2222
 HTTP_PORT=8181
-ID_LENGTH=24
 SSH_CONNECTION_TIMEOUT_SECONDS=900
 SHUTDOWN_TIMEOUT_SECONDS=15
 HTTP_HEALTH_CHECK_ENDPOINT=/health
 BASE_URL=http://localhost
+ID_MAX_GENERATION_ATTEMPTS=10
+ID_LENGTH=24
